--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "enchanted-sign-minecraft-addon",
     "version": "0.0.1",
     "scripts": {
-        "install": "node build/install.js"
+        "install": "node build/install.js",
+        "test": "node test/template.js"
     },
     "devDependencies": {
         "archiver": "^5.1.0",
