--- a/package.json
+++ b/package.json
@@ -2,12 +2,24 @@
     "name": "enchanted-sign-minecraft-addon",
     "version": "0.0.1",
     "scripts": {
-        "install": "node build/install.js",
-        "test": "node test/test.js"
+        "install": "gulp install",
+        "test": "gulp test",
+        "clean": "gulp clean"
     },
     "devDependencies": {
         "archiver": "^5.1.0",
+        "del": "^6.0.0",
+        "fancy-log": "^1.3.3",
         "fs-extra": "^9.0.1",
-        "gulp": "^4.0.2"
+        "gulp": "^4.0.2",
+        "gulp-concat": "^2.6.1",
+        "gulp-data": "^1.3.1",
+        "gulp-footer": "^2.0.2",
+        "gulp-header": "^2.0.9",
+        "gulp-transform": "^3.0.5",
+        "gulp-zip": "^5.0.2"
+    },
+    "dependencies": {
+        "glob": "^7.1.6"
     }
 }
