--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
     "format_version": 2,
     "header": {
-        "description": "rc:Enchanted Sign",
+        "description": "Enchanted Sign",
         "name": "Enchanged Sign",
         "uuid": "b0e6f6f5-2a01-47b1-b407-44ef3329be55",
         "version": [0, 0, 1],
