fixes for first install

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,7 @@
         "name": "Enchanged Sign",
         "uuid": "b0e6f6f5-2a01-47b1-b407-44ef3329be55",
         "version": [0, 0, 1],
-        "min_engine_version": [1,14,0]
+        "min_engine_version": [1, 14 ,0]
     },
     "modules": [
         {
